2007-10-03  Valek Filippov  <frob@df.ru>

    * wmfdraw.py, wmffigs.py: synced back from vsdviewer.
    * wmfdoc.py, pymfvu.py: moved page size detection, backported scrolled/zoom from vsdviewer.
    
2007-09-24  Valek Filippov  <frob@df.ru>

    * wmftext.py: Added reencoding of text from font encoding to UTF-8.
    
2007-09-23  Valek Filippov  <frob@df.ru>

    * wmfdraw.py, emfdraw.py, emfcmd.py: Added IntersectClipRegion.
    
2007-09-14  Valek Filippov  <frob@df.ru>

    * wmffigs.py, emfdraw.py: Fixed arc/pie/chors for 'intentionally wrong' cases.
    * test/*: added dir with testing files and screenshots of them.
    
2007-09-12  Valek Filippov  <frob@df.ru>

    Version 0.0.4
    * pywmf.py: Improved EOF checking
    * wmffigs.py, emfdraw.py: Fixed roundrect for 'intentionally wrong' cases, some code clean-up
    * emf*: added license statement
    * pyemf.py: added while Rob will make a release with load_mem function

2007-09-04  Valek Filippov  <frob@df.ru>

    * Version 0.0.3.
      Merged with pyemfvu and renamed to pymfvu.
      Implemented line cap/join.
      Implemented palette.
      Hexdump is switched off by default.
      Reimplemented WindowOrg/Ext.
  
2007-08-18  Valek Filippov  <frob@df.ru>

    * wmftext.py: Fixed Symbol font translation.
    
2007-08-17  Valek Filippov  <frob@df.ru>

    0.0.1 version has been published.